CLN Fix overflow

--- a/doc/themes/scikit-learn-modern/static/css/theme.css
+++ b/doc/themes/scikit-learn-modern/static/css/theme.css
@@ -195,6 +195,7 @@ div.gsc-results {
 
 div.section {
   margin-bottom: 1rem;
+  overflow-x: scroll;
 }
 
 /* LANDING PAGE STYLE */
